=== 0.6.3 / 2011-07-10

* Use sequential message IDs to reduce memory usage on the client side
* Only send advice with handshake and connect responses
* Stop trying to publish /meta/* messages - no-one is listening and it breaks /**
* Stop loading 'rubygems' within our library code
* Make sure we only queue a message for each client once in the Redis engine
* Use lists instead of sets for message queues in Redis
* Improve clean-up of expired clients in Redis engine


=== 0.6.2 / 2011-06-19

* Add authentication, database selection and namespacing to Redis engine
* Clean up all client data when removing clients from Redis
* Fix cross-origin-long-polling for OPTIONS-aware browsers
* Update secure WebSocket detection for recent Node versions
* Reinstate 'faye.client' field in Rack environment


=== 0.6.1 / 2011-06-06
TestSwarm build: http://swarm.jcoglan.com/job/37/

* Fix cross-origin-long-polling support in RackAdapter
* Plug some potential memory leaks in Memory engine


=== 0.6.0 / 2011-05-21
TestSwarm build: http://swarm.jcoglan.com/job/27/

* Extract core logic into the Engine class to support swappable backends
* Introduce a Redis-backed engine to support clustered web front-ends
* Use CORS for cross-domain long-polling
* Make server more resilient against bad requests, including empty message lists
* Perform subscription validation on the server and use errbacks to signal errors
* Prohibit publishing to wildcard channels
* Unsubscribing from a channel is now O(1) instead of O(N)
* Much more thorough and consistent unit test coverage of both versions
* Automatic integration tests using Terminus and TestSwarm


=== 0.5.5 / 2011-01-16

* Open a real socket to check for WebSocket usability, not just object detection
* Catch server-side errors when handshaking with WebSockets


=== 0.5.4 / 2010-12-19

* Add a #callback method to Subscriptions to detect when they become active
* Add :extensions option to RackAdapter to make it easier to extend middleware